# foop.hs

./: .gitignore  Readme.md  cabal.project  foop.cabal
oop/: counter.cxx  counter.py  greet.py
src/: Counter.hs  Greet.hs  Main.hs  OOP.hs
